# Tex_3eH1e_lab

./: README.md
Laba1/: First.md  Laba1.sln  README.md
Laba1/Laba1/: Laba1.vcxproj  Laba1.vcxproj.filters  TAAAAANKS.cpp  TAAAAANKS.h  inoprishelency.cpp  inoprishelency.h  main.cpp
Laba1/Laba1/x64/Debug/: Laba1.exe.recipe  Laba1.ilk  vc143.idb
Laba1/Laba1/x64/Debug/Laba1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Laba1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Laba2/: Laba2.sln  README.md
Laba2/Laba2/: Filters.cpp  Filters.h  Laba2.vcxproj  Laba2.vcxproj.filters  main.cpp
Laba2/Laba2/x64/Debug/: Laba2.exe.recipe  Laba2.ilk  filters.obj.enc  vc143.idb
Laba2/Laba2/x64/Debug/Laba2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Laba2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Laba3/: Laba3.vcxproj  Laba3.vcxproj.filters  README.md  allababah.cpp  allababah.h  gk.cpp  gk.h  main.cpp  roboti.cpp  roboti.h  teplovizor.cpp  teplovizor.h
Laba3/x64/Debug/: Laba3.exe.recipe  Laba3.ilk  main.obj.enc  vc143.idb
Laba3/x64/Debug/Laba3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Laba3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Laba4/: 1.txt  CMakeLists.txt  README.md  main.cpp
Laba5/: README.md
Laba5/Board_create/: main.cpp
Laba5/Cam_calib/: CMakeLists.txt  aruco_samples_utility.h  main.cpp
Laba5/Create_marker/: CMakeLists.txt  main.cpp
Laba5/Cube_creation/: calibration.yml  main.cpp
